Fixing collapse class.

--- a/scss/components/_media-query.scss
+++ b/scss/components/_media-query.scss
@@ -30,21 +30,16 @@
     box-sizing: border-box;
     padding-left: $global-gutter !important;
     padding-right: $global-gutter !important;
-    
-    // Nested columns won't double the padding
-    .column,
-    .columns {
-      padding-left: 0 !important;
-      padding-right: 0 !important;
-    }
   }
 
   // Collpased columns have no gutter.
   .collapse {
-    table.body & .columns,
-    table.body & .column {
+    > tbody > tr > .columns,
+    > tbody > tr > .column {
+
       padding-left: 0 !important;
       padding-right: 0 !important;
+
     }
   }
 
@@ -108,8 +103,6 @@
 
   //menu
   table.menu {
-    width: 100% !important;
-    
     td,
     th {
       width: auto !important;
